Removed filter query string as the UX is awkward. Will add back when it is fixed

--- a/jdnp3-ui-web-outstation/src/main/webapp/device.xhtml
+++ b/jdnp3-ui-web-outstation/src/main/webapp/device.xhtml
@@ -85,7 +85,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 					<td>
 						<div style="top: 0px; bottom: 0px; left: 0px; right: 0px; display: flex;">
 							<div class="full-text-field-value-view" style="width: 100%" title="Status">
-								<div class="full-text-field-value" style="display: table; width: 19.25em; border-collapse: separate; box-sizing: border-box;">
+								<div class="full-text-field-value" style="display: table; width: 100%; border-collapse: separate; box-sizing: border-box;">
 									<input id="filter" class="full-text-field-value" style="outline: none; border: none; text-align: left; vertical-align: middle; display: table-cell; width: 14.5em; box-sizing: border-box;"></input>
 									<div id="clearFilter" style="display: inline-block; width: 1.5em;">&#x2717;</div>
 								</div>
