Adding global options

--- a/jdnp3-ui-web-outstation/src/main/webapp/station.xhtml
+++ b/jdnp3-ui-web-outstation/src/main/webapp/station.xhtml
@@ -61,7 +61,19 @@
 				</div>
 				<div id="searchResults">
 				</div>
-		</div>
+			</div>
+			<div style="margin-left: 0.75em;">
+				<div style="margin-bottom: 2px;" class="section-header">
+					<span>Global Controls</span>
+				</div>
+				<div>
+					<div>
+						<span>Auto Trigger Event on Change: </span>
+						<button onclick="window['station'].globalAutoTriggerEvent(true)">Enable</button>
+						<button onclick="window['station'].globalAutoTriggerEvent(false)">Disable</button>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </h:body>
